--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "npm": "^11"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "7.1.1",
+    "@ministryofjustice/frontend": "8.0.0",
     "@ministryofjustice/hmpps-auth-clients": "^1.0.1",
     "@ministryofjustice/hmpps-monitoring": "^1.0.0",
     "@ministryofjustice/hmpps-rest-client": "^1.0.0",
@@ -57,13 +57,13 @@
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "redis": "^5.10.0",
-    "superagent": "^10.2.3",
+    "superagent": "^10.3.0",
     "validator": "^13.15.26",
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-typecheck": "^4.0.4",
-    "@ministryofjustice/eslint-config-hmpps": "^1.0.2",
+    "@ministryofjustice/eslint-config-hmpps": "1.0.2",
     "@ministryofjustice/hmpps-npm-script-allowlist": "0.0.3",
     "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@playwright/test": "1.57.0",
@@ -85,8 +85,8 @@
     "@types/validator": "^13.15.10",
     "@types/validatorjs": "^3.15.5",
     "audit-ci": "^7.1.0",
+    "del": "8.0.1",
     "esbuild": "0.27.2",
-    "esbuild-plugin-clean": "^1.0.1",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-plugin-manifest": "^1.0.5",
     "esbuild-sass-plugin": "^3.3.1",
@@ -96,7 +96,7 @@
     "jsonwebtoken": "^9.0.3",
     "lint-staged": "^16.2.7",
     "nock": "^14.0.10",
-    "supertest": "^7.1.4",
+    "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "typescript": "^5.9.3"
   }
